# pybasil

./: AGENTS.md  README.md  pyproject.toml
docs/: language_support_status.md
scripts/benchmarks/: bench_workload.vbs  run_benchmark.py
src/pybasil/: __init__.py  ast_nodes.py  builtins.py  cli.py  interpreter.py  parser.py  runtime.py
src/pybasil/grammar/: vbscript.lark
tests/: conftest.py  test_interpreter.py  test_parser.py  test_regression.py
tests/regression_scripts/: alpha.vbs  beta-greedy-arglist-bugfix.vbs  gamma-execute-eval.vbs
