[project]
name = "pybasil"
version = "0.1.0"
description = "A VBScript parser and interpreter in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lark>=1.3.1",
]

[project.scripts]
pybasil = "pybasil.cli:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.11.0",
]
